# Data-Structures-and-Programming

./: CMakeLists.txt  README.md
Challenges/2025-2026/Week 00/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 00/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 01/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 02/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 03/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 04/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 05/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 06/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 07/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 08/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 09/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 10/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 11/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 12/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 13/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 14/: README.md
Informatics/2025-2026/Seminars/Group 3/Week 15/: README.md
Source/: BinarySearchTree.hpp  BinarySearchTree.inl  DoublyLinkedList.hpp  Vector.hpp  Vector.inl
Source/BinarySearchTree/: BinarySearchTree.hpp  BinarySearchTree.inl
Source/DoublyLinkedList/: DoublyLinkedList.inl
Source/SinglyLinkedList/: SinglyLinkedList.hpp  SinglyLinkedList.inl
Source/Vector/: Vector.inl
Structures/Source/DoublyLinkedList/: DoublyLinkedList.hpp
Structures/Source/Vector/: Vector.hpp
(+9 files in other folders)
